[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prescription-intelligence-agent"
version = "0.1.0"
description = "RAG-powered prescription access and coverage intelligence agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "fastapi>=0.115.0",
    "langgraph>=0.2.50,<0.3.0",
    "mangum>=0.17.0",
    "numpy>=1.26.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.30",
    "streamlit>=1.38.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]
postgres = ["psycopg[binary]>=3.2.0"]
faiss = ["faiss-cpu>=1.8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/streamlit_app.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
